// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Level component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <div
    class="level other-class this-is-a-test"
  >
    <div
      class="level-item"
    >
      Item 1
    </div>
  </div>
</DocumentFragment>
`;

exports[`Level component should render 1`] = `
<DocumentFragment>
  <div
    class="level"
  />
</DocumentFragment>
`;

exports[`Level component should render 2`] = `
<DocumentFragment>
  <div
    class="level-left"
  />
</DocumentFragment>
`;

exports[`Level component should render 3`] = `
<DocumentFragment>
  <div
    class="level-item"
  />
</DocumentFragment>
`;

exports[`Level component should render Levels with right and left side 1`] = `
<DocumentFragment>
  <div
    class="level"
  >
    <div
      class="level-left"
    >
      <div
        class="level-item"
      >
        Item 1
      </div>
      <div
        class="level-item"
      >
        Item 2
      </div>
    </div>
    <div
      class="level-right"
    >
      <div
        class="level-item"
      >
        Item 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Level component should use inline styles 1`] = `
<DocumentFragment>
  <div
    class="level"
    style="height: 250px;"
  >
    <div
      class="level-item"
    >
      Item 1
    </div>
  </div>
</DocumentFragment>
`;
